bindings/c89/aead/aes192gcm_haswell.h

/* @generated */

#ifndef HABERDASHERY_AES_192_GCM_HASWELL_H
#define HABERDASHERY_AES_192_GCM_HASWELL_H

#include <stdint.h>
#include <stdlib.h>

#define HABERDASHERY_AES_192_GCM_HASWELL_KEY_LEN 24
#define HABERDASHERY_AES_192_GCM_HASWELL_NONCE_LEN 12
#define HABERDASHERY_AES_192_GCM_HASWELL_TAG_LEN 16

__attribute__((aligned(16)))
typedef struct haberdashery_aes192gcm_haswell_t {
  uint8_t value[304];
} haberdashery_aes192gcm_haswell_t;

#ifdef __cplusplus
extern "C" {
#endif /* __cplusplus */

int haberdashery_aes192gcm_haswell_init(
    haberdashery_aes192gcm_haswell_t *aead,
    const unsigned char *key,         size_t key_len);
int haberdashery_aes192gcm_haswell_encrypt(
    haberdashery_aes192gcm_haswell_t *const aead,
    const unsigned char *nonce,       size_t nonce_len,
    const unsigned char *aad,         size_t aad_len,
    const unsigned char *plaintext,   size_t plaintext_len,
    unsigned char *ciphertext,        size_t ciphertext_len,
    unsigned char *tag,               size_t tag_len);
int haberdashery_aes192gcm_haswell_decrypt(
    haberdashery_aes192gcm_haswell_t *const aead,
    const unsigned char *nonce,       size_t nonce_len,
    const unsigned char *aad,         size_t aad_len,
    const unsigned char *ciphertext,  size_t ciphertext_len,
    const unsigned char *tag,         size_t tag_len,
    unsigned char *plaintext,         size_t plaintext_len);
int haberdashery_aes192gcm_haswell_is_supported(void);

#ifdef __cplusplus
} /* extern "C" */
#endif /* __cplusplus */
#endif /* HABERDASHERY_AES_192_GCM_HASWELL_H */